--- a/laptop_programs/mapper_params_online_async.yaml
+++ b/laptop_programs/mapper_params_online_async.yaml
@@ -23,14 +23,14 @@ slam_toolbox:
     # or at the dock, but they are mutually exclusive, if pose is given
     # will use pose
     #map_start_pose: [0.0, 0.0, 0.0]
-    map_start_at_dock: false
+    map_start_at_dock: true
 
     debug_logging: false
     throttle_scans: 1
     transform_publish_period: 0.02 #if 0 never publishes odometry
     map_update_interval: 5.0
     resolution: 0.05
-    #max_laser_range: 2000.0 #for rastering images
+    max_laser_range: 1.25 #for rastering images
     minimum_time_interval: 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 30.
